--- a/index.html
+++ b/index.html
@@ -94,9 +94,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="video">
-                    <video autoplay muted playsinline src="videos/Countdown7.mp4"></video>
-                </div>
+                <a hreflang="" class="video" data-fancybox href="videos/Countdown7.mp4">
+                    <img class="video__img" src="img/video.webp" alt="">
+                    <span class="video__btn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="53" height="53" viewBox="0 0 53 53" fill="none">
+            <path d="M33 25.634C33.6667 26.0189 33.6667 26.9811 33 27.366L24 32.5622C23.3333 32.9471 22.5 32.466 22.5 31.6962L22.5 21.3038C22.5 20.534 23.3333 20.0529 24 20.4378L33 25.634Z" fill="white"/>
+        </svg>
+    </span>
+                </a>
+
                 <div class="companies">
                     <div class="container">
                         <div class="companies__grid">
@@ -661,9 +667,15 @@
             </div>
 
             <div class="video-section">
-                <div class="video">
-                    <video autoplay muted playsinline src="videos/Countdown7.mp4"></video>
-                </div>
+                <a hreflang="" class="video" data-fancybox href="videos/Countdown7.mp4">
+                    <img class="video__img" src="img/video.webp" alt="">
+                    <span class="video__btn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="53" height="53" viewBox="0 0 53 53" fill="none">
+            <path d="M33 25.634C33.6667 26.0189 33.6667 26.9811 33 27.366L24 32.5622C23.3333 32.9471 22.5 32.466 22.5 31.6962L22.5 21.3038C22.5 20.534 23.3333 20.0529 24 20.4378L33 25.634Z" fill="white"/>
+        </svg>
+    </span>
+                </a>
+
             </div>
 
             <div class="partners">
