--- a/nav.html
+++ b/nav.html
@@ -29,28 +29,24 @@
 
     <div class="wrapper" style="padding: 50px;">
         <a href="index.html" style="display: block; margin-bottom: 20px;">
-            Главная
+            Main
+        </a>
+        <a href="web.html" style="display: block; margin-bottom: 20px;">
+            Web
+        </a>
+        <a href="case.html" style="display: block; margin-bottom: 20px;">
+            Case
+        </a>
+        <a href="blog.html" style="display: block; margin-bottom: 20px;">
+            Blog
         </a>
 
 
 
 
-        <button style="border: 2px solid #000;margin-bottom: 20px;" data-bs-toggle="modal" data-bs-target="#quickOrder">
-            Быстрый заказ
-        </button>
-
-
-        <code>
-
-            @@include
-            ('components/page-blocks/_filter-slider.html',{ <br>
-            "start1":"0", <br>
-            "start2":"30000", <br>
-            "min":"1000", <br>
-            "max":"100000", <br>
-            })
-
-        </code>
+        <!--        <button style="border: 2px solid #000;margin-bottom: 20px;" data-bs-toggle="modal" data-bs-target="#quickOrder">-->
+        <!--            Быстрый заказ-->
+        <!--        </button>-->
     </div>
 
 
