--- a/nav.html
+++ b/nav.html
@@ -8,8 +8,10 @@
     <meta name="keywords" content="">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
     <title>Главная</title>
 </head>
+
 
 
 <style>
@@ -40,13 +42,16 @@
         <a href="blog.html" style="display: block; margin-bottom: 20px;">
             Blog
         </a>
+        <a href="case2.html" style="display: block; margin-bottom: 20px;">
+            Case Studies
+        </a>
 
 
 
 
-        <!--        <button style="border: 2px solid #000;margin-bottom: 20px;" data-bs-toggle="modal" data-bs-target="#quickOrder">-->
-        <!--            Быстрый заказ-->
-        <!--        </button>-->
+        <button data-modal="chatModal" style="border: 2px solid #000;margin-bottom: 20px;">
+            Let’s chat
+        </button>
     </div>
 
 
@@ -55,17 +60,47 @@
 
 
 
-    <div class="modal" id="Modal">
+    <div class="modal" id="chatModal">
         <div class="modal__bg modal-bg _close-modal"></div>
         <div class="modal__dialog">
+            <button class="close-btn _close-modal">
+                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.4001 12.4L1.6001 1.60001L12.4001 12.4ZM12.4001 1.60001L1.6001 12.4L12.4001 1.60001Z" fill="#057FE2" />
+                    <path d="M12.4001 12.4L1.6001 1.60001M12.4001 1.60001L1.6001 12.4" stroke="white" stroke-linecap="square" />
+                </svg>
+            </button>
             <div class="modal__top">
-                <div class="text32 medium-text">
-                    Title
+                <div class="h1">
+                    Let’s chat
                 </div>
-                <button class="close-btn _close-modal">
-                    <img src="img/close.svg" alt="">
-                </button>
+                <div class="text22 text18-tablet medium-text">
+                    Fill in the form, and our team will be in touch shortly.
+                </div>
             </div>
+            <form action="" class="modal-form">
+                <div class="modal-form__fields">
+                    <div class="fg">
+                        <input type="text" placeholder="Name*">
+                    </div>
+                    <div class="fg">
+                        <input type="text" placeholder="Phone*">
+                    </div>
+                    <div class="fg _full">
+                        <input type="text" placeholder="Email*">
+                    </div>
+                </div>
+                <div class="m-check">
+                    <input checked type="checkbox">
+                    <label>
+                        <span>By submitting this for I accept the Privacy Policy of this site.</span>
+                    </label>
+                </div>
+                <div class="modal-form__nav">
+                    <button class="modal-form__btn m-btn m-btn-white">
+                        <span>Send</span>
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
 
