--- a/web.html
+++ b/web.html
@@ -8,8 +8,10 @@
     <meta name="keywords" content="">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
     <title>Web</title>
 </head>
+
 
 <body class="m-page">
     <div class="wrapper">
